--- a/personalsite/main/templates/aero.html
+++ b/personalsite/main/templates/aero.html
@@ -6,9 +6,9 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Aerodynamics &amp; Composites Team Captain<br>Carnegie Mellon Racing (2022-23)</h1>
+<div class="project-page">
+    <h1>Aerodynamics &amp; Composites Team Captain — Carnegie Mellon Racing (2022-23)</h1>
 
-    <!-- Introduction Section -->
     <section class="project-section">
         <p>
             I served as the Aerodynamics and Composites team captain for Carnegie Mellon Racing’s
@@ -126,7 +126,6 @@
 
     </section>
 
-    <!-- Results & Impact Section -->
     <section class="project-section">
         <h2>Results</h2>
         <p>
@@ -138,5 +137,5 @@
             <img src="{% static 'images/Aero/trophy_square.jpg' %}" alt="Trophy Photo">
         </div>
     </section>
-
+</div>
 {% endblock content %}
