--- a/personalsite/main/templates/bcbets.html
+++ b/personalsite/main/templates/bcbets.html
@@ -6,6 +6,7 @@
 {% endblock title %}
 
 {% block content %}
+<div class="project-page">
     <h1>Live Analysis of DraftKings' NBA Moneyline Bets with Machine Learning</h1>
 
     <section class="project-section">
@@ -94,4 +95,5 @@
             of green bets where a major change has occurred in the past few games. Allow the model time 
             (typically over the next 5-10 games) to incorporate these changes. </p>
     </section>
+</div>
 {% endblock content %}
