--- a/personalsite/main/templates/uprights.html
+++ b/personalsite/main/templates/uprights.html
@@ -6,7 +6,8 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Uprights Lead<br>Carnegie Mellon Racing (2023-24)</h1>
+<div class="project-page">
+    <h1>Uprights Lead — Carnegie Mellon Racing (2023-24)</h1>
 
     <section class="project-section">
         <p>
@@ -74,20 +75,21 @@
         <div class="photo-grid photo-grid--1x4">
             <figure>
                 <img src="{% static 'images/Uprights/GearsUpright.png' %}" alt="Gears in Upright">
-              <figcaption>Planetary Gearset in Upright</figcaption>
+                <figcaption>Planetary Gearset in Upright</figcaption>
             </figure>
             <figure>
                 <img src="{% static 'images/UprightOil.jpg' %}" alt="Upright with Oil">
-              <figcaption>Gear Oil in Upright</figcaption>
+                <figcaption>Gear Oil in Upright</figcaption>
             </figure>
             <figure>
                 <img src="{% static 'images/Uprights/UprightAssembly.jpg' %}" alt="PT Assembly">
-              <figcaption>Full Hub Motor Assembly</figcaption>
+                <figcaption>Full Hub Motor Assembly</figcaption>
             </figure>
             <figure>
                 <img src="{% static 'images/Uprights/UprightMounted.PNG' %}" alt="Camber Plates">
-              <figcaption>Upright on Car</figcaption>
+                <figcaption>Upright on Car</figcaption>
             </figure>
         </div>
     </section>
+</div>
 {% endblock content %}
